--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="today">today</string>
     <string name="use_timeaps">Use the Timelaps?</string>
     <string name="use_timeaps_study">타임랩스로 녹화하면서 공부할 수 있어요!</string>
+    <string name="back">back</string>
+    <string name="setting">setting</string>
 </resources>
